// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > context 1`] = `
"@startdot
digraph Context {
  graph [layout=nop2, overlap=true, splines=true, bgcolor="white", pad=0.15, outputorder=edgesfirst];
  node [fontname="sans-serif", fontsize=14, fixedsize=true, pin=true, style=filled, color="#64748B", fillcolor="white", penwidth=1.2];
  edge [fontname="sans-serif", fontsize=12, color="#475569", fontcolor="#334155", penwidth=1.2, arrowsize=0.7, headclip=false, tailclip=false];
  SYSTEM_ [shape=circle, pos="0,0!", width=2.777778, height=2.777778, label="FlintFlow", fontsize=18, fillcolor="#F1F5F9", color="#475569"];
  A01 [shape=box, pos="-378.000000,0.000000!", width=1.444444, height=2.611111, label="Founder", side="left"];
  A02 [shape=box, pos="-544.800000,1076.833333!", width=2.780556, height=0.611111, label="Business Analyst", side="top"];
  A03 [shape=box, pos="-459.000000,-914.333333!", width=2.455556, height=0.611111, label="Administrator", side="bottom"];
  A04 [shape=box, pos="-168.600000,1076.833333!", width=2.888889, height=0.611111, label="Guest", side="top"];
  A05 [shape=box, pos="-145.200000,-914.333333!", width=2.347222, height=0.611111, label="Payment Gateway", side="bottom"];
  A06 [shape=box, pos="176.400000,1076.833333!", width=2.347222, height=0.611111, label="LLM Provider", side="top"];
  A07 [shape=box, pos="129.600000,-914.333333!", width=2.284722, height=0.611111, label="PlantUML Server", side="bottom"];
  A08 [shape=box, pos="529.200000,1076.833333!", width=2.997222, height=0.611111, label="Email Service", side="top"];
  A09 [shape=box, pos="435.600000,-914.333333!", width=2.780556, height=0.611111, label="Scheduler", side="bottom"];
  A01_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-326.000000,63.000000!"];
  SYSTEM_A01_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-90.957860,41.553191!"];
  SYSTEM_A01_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-98.631136,16.489362!"];
  A01_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-326.000000,25.000000!"];
  A01_IN_1 [shape=point, style=invis, width=0, height=0, label="", pos="-326.000000,-25.000000!"];
  SYSTEM_A01_IN_1 [shape=point, style=invis, width=0, height=0, label="", pos="-98.631136,-16.489362!"];
  SYSTEM_A01_OUT_1 [shape=point, style=invis, width=0, height=0, label="", pos="-90.957860,-41.553191!"];
  A01_OUT_1 [shape=point, style=invis, width=0, height=0, label="", pos="-326.000000,-63.000000!"];
  A02_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-632.900000,1054.833333!"];
  SYSTEM_A02_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-62.000000,78.460181!"];
  SYSTEM_A02_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-44.739137,89.433828!"];
  A02_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-456.700000,1054.833333!"];
  A04_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-260.600000,1054.833333!"];
  SYSTEM_A04_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-25.528836,96.686496!"];
  SYSTEM_A04_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-7.503871,99.718062!"];
  A04_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-76.600000,1054.833333!"];
  A06_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="103.900000,1054.833333!"];
  SYSTEM_A06_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="10.178227,99.480670!"];
  SYSTEM_A06_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="24.382683,96.981879!"];
  A06_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="248.900000,1054.833333!"];
  A08_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="433.300000,1054.833333!"];
  SYSTEM_A08_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="42.446832,90.544279!"];
  SYSTEM_A08_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="61.235898,79.057984!"];
  A08_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="625.100000,1054.833333!"];
  A03_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-535.400000,-892.333333!"];
  SYSTEM_A03_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-62.000000,-78.460181!"];
  SYSTEM_A03_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-44.305566,-89.649411!"];
  A03_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-382.600000,-892.333333!"];
  A05_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-217.700000,-892.333333!"];
  SYSTEM_A05_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="-25.209936,-96.770135!"];
  SYSTEM_A05_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-8.418752,-99.644993!"];
  A05_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="-72.700000,-892.333333!"];
  A07_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="72.700000,-892.333333!"];
  SYSTEM_A07_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="8.418752,-99.644993!"];
  SYSTEM_A07_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="21.596937,-97.640014!"];
  A07_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="186.500000,-892.333333!"];
  A09_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="347.500000,-892.333333!"];
  SYSTEM_A09_IN_0 [shape=point, style=invis, width=0, height=0, label="", pos="40.240941,-91.545981!"];
  SYSTEM_A09_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="60.645125,-79.512067!"];
  A09_OUT_0 [shape=point, style=invis, width=0, height=0, label="", pos="523.700000,-892.333333!"];
  A01_IN_0 -> SYSTEM_A01_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>brief answers</TD></TR></TABLE>>, actor_id="A01", flow="in", pair_index=0, pos="e,-90.957860,41.553191 -326.000000,63.000000 -250.229642,69.781533 -174.459284,63.318211 -98.688927,43.610036", lp="-255.487358,82.487460"];
  SYSTEM_A01_OUT_0 -> A01_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>draft section</TD></TR></TABLE>>, actor_id="A01", flow="out", pair_index=0, pos="e,-326.000000,25.000000 -98.631136,16.489362 -171.778562,32.403098 -244.925988,35.600414 -318.073414,26.081309", lp="-257.789341,48.047370"];
  A01_IN_1 -> SYSTEM_A01_IN_1 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>accepted step</TD></TR></TABLE>>, actor_id="A01", flow="in", pair_index=1, pos="e,-98.631136,-16.489362 -326.000000,-25.000000 -252.819407,-35.442510 -179.638815,-33.157065 -106.458222,-18.143665", lp="-257.789341,-48.047370"];
  SYSTEM_A01_OUT_1 -> A01_OUT_1 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>srs document</TD></TR></TABLE>>, actor_id="A01", flow="out", pair_index=1, pos="e,-326.000000,-63.000000 -90.957860,-41.553191 -166.647793,-62.140432 -242.337726,-69.510921 -318.027658,-63.664657", lp="-255.487358,-82.487460"];
  A02_IN_0 -> SYSTEM_A02_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>verification result</TD></TR></TABLE>>, actor_id="A02", flow="in", pair_index=0, pos="e,-62.000000,78.460181 -632.900000,1054.833333 -462.450246,731.619965 -273.590388,408.406597 -66.320425,85.193228", lp="-654.405600,937.668555"];
  SYSTEM_A02_OUT_0 -> A02_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>red flag list</TD></TR></TABLE>>, actor_id="A02", flow="out", pair_index=0, pos="e,-456.700000,1054.833333 -44.739137,89.433828 -199.513464,408.732023 -335.910222,728.030218 -453.929411,1047.328412", lp="-473.878296,938.985393"];
  A04_IN_0 -> SYSTEM_A04_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>registration request</TD></TR></TABLE>>, actor_id="A04", flow="in", pair_index=0, pos="e,-25.528836,96.686496 -260.600000,1054.833333 -201.386537,738.002915 -123.803509,421.172497 -27.850916,104.342079", lp="-326.305060,939.855713"];
  SYSTEM_A04_OUT_0 -> A04_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>registration result</TD></TR></TABLE>>, actor_id="A04", flow="out", pair_index=0, pos="e,-76.600000,1054.833333 -7.503871,99.718062 -48.853350,415.423421 -71.847523,731.128781 -76.486391,1046.834140", lp="-158.322065,940.219501"];
  A06_IN_0 -> SYSTEM_A06_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>generated draft</TD></TR></TABLE>>, actor_id="A06", flow="in", pair_index=0, pos="e,10.178227,99.480670 103.900000,1054.833333 91.430106,739.017151 60.601145,423.200968 11.413118,107.384786", lp="30.066987,940.191014"];
  SYSTEM_A06_OUT_0 -> A06_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>draft request</TD></TR></TABLE>>, actor_id="A06", flow="out", pair_index=0, pos="e,248.900000,1054.833333 24.382683,96.981879 117.119369,413.639582 191.495192,730.297285 247.510154,1046.954988", lp="167.171522,939.891159"];
  A08_IN_0 -> SYSTEM_A08_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>email delivery result</TD></TR></TABLE>>, actor_id="A08", flow="in", pair_index=0, pos="e,42.446832,90.544279 433.300000,1054.833333 322.522601,735.823559 193.358544,416.813784 45.807830,97.804010", lp="300.411220,939.118647"];
  SYSTEM_A08_OUT_0 -> A08_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>email request</TD></TR></TABLE>>, actor_id="A08", flow="out", pair_index=0, pos="e,625.100000,1054.833333 61.235898,79.057984 266.354861,401.951384 453.077632,724.844784 621.404210,1047.738184", lp="502.649908,937.740291"];
  A03_IN_0 -> SYSTEM_A03_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>account action</TD></TR></TABLE>>, actor_id="A03", flow="in", pair_index=0, pos="e,-62.000000,-78.460181 -535.400000,-892.333333 -397.413387,-623.278231 -241.066537,-354.223130 -66.359449,-85.168028", lp="-549.105600,-794.668555"];
  SYSTEM_A03_OUT_0 -> A03_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>platform metrics</TD></TR></TABLE>>, actor_id="A03", flow="out", pair_index=0, pos="e,-382.600000,-892.333333 -44.305566,-89.649411 -174.501571,-354.695606 -286.380197,-619.741802 -379.941446,-884.787998", lp="-420.318268,-796.011263"];
  A05_IN_0 -> SYSTEM_A05_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>payment result</TD></TR></TABLE>>, actor_id="A05", flow="in", pair_index=0, pos="e,-25.209936,-96.770135 -217.700000,-892.333333 -172.640094,-629.691482 -109.270212,-367.049631 -27.590354,-104.407780", lp="-265.114792,-796.865750"];
  SYSTEM_A05_OUT_0 -> A05_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>payment request</TD></TR></TABLE>>, actor_id="A05", flow="out", pair_index=0, pos="e,-72.700000,-892.333333 -8.418752,-99.644993 -48.107891,-361.207939 -69.505216,-622.770885 -72.610726,-884.333831", lp="-139.399850,-797.210732"];
  A07_IN_0 -> SYSTEM_A07_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>diagram png</TD></TR></TABLE>>, actor_id="A07", flow="in", pair_index=0, pos="e,8.418752,-99.644993 72.700000,-892.333333 69.967130,-630.740649 48.938287,-369.147965 9.613470,-107.555281", lp="17.999850,-797.210732"];
  SYSTEM_A07_OUT_0 -> A07_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>puml source</TD></TR></TABLE>>, actor_id="A07", flow="out", pair_index=0, pos="e,186.500000,-892.333333 21.596937,-97.640014 94.496964,-359.896063 149.100779,-622.152111 185.408382,-884.408160", lp="119.725232,-796.970135"];
  A09_IN_0 -> SYSTEM_A09_IN_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>housekeeping tick</TD></TR></TABLE>>, actor_id="A09", flow="in", pair_index=0, pos="e,40.240941,-91.545981 347.500000,-892.333333 264.509136,-627.833280 163.189794,-363.333227 43.541974,-98.833174", lp="240.242513,-796.238851"];
  SYSTEM_A09_OUT_0 -> A09_OUT_0 [label=<<TABLE BORDER="0" CELLBORDER="0" CELLSPACING="0" CELLPADDING="3" BGCOLOR="white"><TR><TD>housekeeping result</TD></TR></TABLE>>, actor_id="A09", flow="out", pair_index=0, pos="e,523.700000,-892.333333 60.645125,-79.512067 232.141157,-348.068685 385.297546,-616.625303 520.114291,-885.181922", lp="389.947015,-794.794781"];
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > erd 1`] = `
"@startchen
skinparam monochrome true
skinparam ranksep 20
skinparam linetype ortho
entity "User" as E01 {
}
entity "Project" as E02 {
}
entity "Spine" as E03 {
}
entity "ChatSession" as E04 {
}
entity "CreditLedger" as E05 {
}
entity "Subscription" as E06 {
}
entity "Notification" as E07 {
}
entity "Baseline" as E08 {
}
entity "ChangeRecord" as E09 {
}
entity "UsageRecord" as E10 {
}
entity "Flag" as E11 {
}
entity "Diagram" as E12 {
}
relationship "has" as R_E01_E02 {
}
E01 -1- R_E01_E02
R_E01_E02 -N- E02
relationship "has" as R_E01_E05 {
}
E01 -1- R_E01_E05
R_E01_E05 -N- E05
relationship "has" as R_E01_E07 {
}
E01 -1- R_E01_E07
R_E01_E07 -N- E07
relationship "has" as R_E02_E03 {
}
E02 -1- R_E02_E03
R_E02_E03 -N- E03
relationship "has" as R_E02_E04 {
}
E02 -1- R_E02_E04
R_E02_E04 -N- E04
relationship "has" as R_E03_E08 {
}
E03 -1- R_E03_E08
R_E03_E08 -N- E08
relationship "has" as R_E03_E09 {
}
E03 -1- R_E03_E09
R_E03_E09 -N- E09
relationship "has" as R_E03_E11 {
}
E03 -1- R_E03_E11
R_E03_E11 -N- E11
relationship "has" as R_E03_E12 {
}
E03 -1- R_E03_E12
R_E03_E12 -N- E12
relationship "has" as R_E05_E10 {
}
E05 -1- R_E05_E10
R_E05_E10 -N- E10
relationship "has" as R_E06_E01 {
}
E06 -1- R_E06_E01
R_E06_E01 -N- E01
@endchen
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 1 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Founder";
  START [label="Founder", shape=diamond, style=solid];
  S01 [label="Login"];
  S03 [label="Forgot Password", shape=ellipse];
  S04 [label="Onboarding"];
  S05 [label="Project Dashboard"];
  S06 [label="Create Project", shape=ellipse];
  subgraph cluster_S07 {
    label="Project Workspace"; style=solid;
    S07_T1 [label="Chat"];
    S07_T2 [label="Document"];
    S07_T3 [label="History"];
  }
  S08 [label="Diagram Preview"];
  S09 [label="Verification & Change Panel"];
  S10 [label="Export"];
  S11 [label="Plan & Pricing"];
  S12 [label="Billing History"];
  S13 [label="Notification Center"];
  START -> S01;
  START -> S04;
  S01 -> S03;
  S01 -> S05;
  S04 -> S05;
  S05 -> S06;
  S05 -> S07_T1 [lhead=cluster_S07];
  S05 -> S11;
  S05 -> S13;
  S06 -> S07_T1 [lhead=cluster_S07];
  S07_T1 -> S08 [ltail=cluster_S07];
  S07_T1 -> S09 [ltail=cluster_S07];
  S07_T1 -> S10 [ltail=cluster_S07];
  S09 -> S10;
  S11 -> S12;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 2 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Business Analyst";
  START [label="Business Analyst", shape=diamond, style=solid];
  S01 [label="Login"];
  S04 [label="Onboarding"];
  S05 [label="Project Dashboard"];
  subgraph cluster_S07 {
    label="Project Workspace"; style=solid;
    S07_T1 [label="Chat"];
    S07_T2 [label="Document"];
    S07_T3 [label="History"];
  }
  S08 [label="Diagram Preview"];
  S09 [label="Verification & Change Panel"];
  S10 [label="Export"];
  S13 [label="Notification Center"];
  START -> S01;
  START -> S04;
  S01 -> S05;
  S04 -> S05;
  S05 -> S07_T1 [lhead=cluster_S07];
  S05 -> S13;
  S07_T1 -> S08 [ltail=cluster_S07];
  S07_T1 -> S09 [ltail=cluster_S07];
  S07_T1 -> S10 [ltail=cluster_S07];
  S09 -> S10;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 3 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Administrator";
  START [label="Administrator", shape=diamond, style=solid];
  S01 [label="Login"];
  S14 [label="Admin User List"];
  S15 [label="Admin User Detail"];
  S16 [label="Admin Metrics Dashboard"];
  S17 [label="Admin AI Cost Report"];
  S18 [label="Admin Prompt Templates"];
  S19 [label="Admin Audit Log"];
  START -> S01;
  S01 -> S14;
  S14 -> S15;
  S14 -> S16;
  S14 -> S17;
  S14 -> S18;
  S14 -> S19;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_flow part 4 1`] = `
"@startdot
digraph screens_flow {
  graph [fontname="DejaVu Sans", fontsize=13, labelloc=t, compound=true, nodesep=0.4, ranksep=0.5];
  node [fontname="DejaVu Sans", fontsize=11, shape=box, color="#000000"];
  edge [arrowsize=0.8];
  label="Screens flow for Guest";
  START [label="Guest", shape=diamond, style=solid];
  S01 [label="Login"];
  S02 [label="Register"];
  S03 [label="Forgot Password", shape=ellipse];
  START -> S01;
  S01 -> S02;
  S01 -> S03;
}
@enddot
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S01 1`] = `
"@startsalt
{+
  <b>Login
  {#
    <b>Function | <b>Description
    Submit Credentials | Authenticates the user with email and password and issues an access token.
    Log In with Google | Authenticates via Google OAuth and links or creates the local account.
    Toggle Password Visibility | Switches the password input between masked and plain text.
    Navigate to Register | Navigates to the registration screen.
    Open Forgot Password | Opens the Forgot Password popup over the login form.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S05 1`] = `
"@startsalt
{+
  <b>Project Dashboard
  {#
    <b>Function | <b>Description
    List Projects | Shows the user's projects with name, status, readiness score and last activity.
    Search Projects | Filters the project cards by name substring.
    Filter by Status | Restricts the list to active or archived projects.
    Open Project | Opens the Project Workspace and resumes at the stored pipeline position.
    Archive Project | Archives the project after confirmation; archived projects stay readable.
    Open Create Project | Opens the Create Project popup.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S07 1`] = `
"@startsalt
{+
  <b>Project Workspace
  {#
    <b>Function | <b>Description
    Send Chat Message | Sends the user turn to the pipeline orchestrator for the current step.
    Stream AI Response | Streams the model response into the chat pane over SSE with a cancel control.
    Switch Tab | Switches between Chat, Document and History without losing pane state.
    Render Document Pane | Renders the assembled SRS read-only with status badges per section.
    Accept Step at Gate | Accepts the current step's output, commits its transaction and advances the pipeline.
    Request Revision at Gate | Sends the user's revision notes back to the step within the turn ceiling.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S09 1`] = `
"@startsalt
{+
  <b>Verification & Change Panel
  {#
    <b>Function | <b>Description
    List Open Flags | Shows open red and yellow flags with rule, target and remediation step.
    Waive Flag | Waives an eligible red flag with a mandatory typed reason.
    Submit Change Request | Turns a natural-language change request into a previewable op batch.
    Preview Impact Diff | Shows a field-level before/after diff and the dependent sections that become stale.
    Apply Change Transaction | Applies the whole op batch atomically and records the change history.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > screen_layout@S10 1`] = `
"@startsalt
{+
  <b>Export
  {#
    <b>Function | <b>Description
    Configure Export Options | Chooses between working draft and baseline export and shows blockers.
    Export Working Draft | Renders the current document to Word with a DRAFT watermark on every page.
    Export Baseline Document | Renders the clean document from the baseline snapshot, not from the current Spine.
    Show Export Blockers | Explains which precondition fails and links the shortcut to fix it.
    Download Exported File | Streams the generated .docx to the browser with a versioned file name.
  }
}
@endsalt
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > usecase part 1 1`] = `
"@startuml
skinparam monochrome true
left to right direction
title Use Cases — Founder
actor "Founder" as A01
actor "Business Analyst" as A02
actor "Administrator" as A03
actor "Guest" as A04
rectangle "FlintFlow" {
  usecase "Log In" as UC02
  usecase "Reset Password" as UC03
  usecase "Complete Onboarding" as UC04
  usecase "Create Project" as UC06
  usecase "Browse Projects" as UC05
  usecase "Resume Project" as UC07
  usecase "Refine Product Brief" as UC08
  usecase "Generate SRS Content" as UC09
  usecase "Accept Step At Gate" as UC10
  usecase "Render Diagrams" as UC12
  usecase "Request Change" as UC11
  usecase "Preview Change Impact" as UC23
  usecase "Verify Document" as UC13
  usecase "Waive Red Flag" as UC14
  usecase "Sign Baseline" as UC15
  usecase "Export Word Document" as UC16
  usecase "Purchase Credits" as UC17
  usecase "View Billing History" as UC18
  usecase "Receive Notifications" as UC19
  usecase "Archive Project" as UC24
}
actor "Payment Gateway" as A05 <<system>>
actor "LLM Provider" as A06 <<system>>
actor "PlantUML Server" as A07 <<system>>
actor "Email Service" as A08 <<system>>
A01 -- UC02
A02 -- UC02
A03 -- UC02
A04 -- UC02
A01 -- UC03
UC03 -- A08
A01 -- UC06
A01 -- UC05
A01 -- UC07
A01 -- UC08
UC08 -- A06
A01 -- UC09
UC09 -- A06
UC12 -- A07
A01 -- UC11
A02 -- UC15
A01 -- UC16
A01 -- UC17
UC17 -- A05
A01 -- UC18
A01 -- UC19
A01 -- UC24
UC04 ..> UC06 : <<extend>>
UC09 ..> UC10 : <<include>>
UC09 ..> UC12 : <<include>>
UC11 ..> UC23 : <<include>>
UC14 ..> UC15 : <<extend>>
UC15 ..> UC13 : <<include>>
@enduml
"
`;

exports[`renderers trên fixture 19 màn > mọi hình: mở/đóng đúng, không dấu tiếng Việt, ổn định giữa hai lần gọi (snapshot) > usecase part 2 1`] = `
"@startuml
skinparam monochrome true
left to right direction
title Use Cases — Administrator / Guest / Scheduler
actor "Administrator" as A03
actor "Guest" as A04
rectangle "FlintFlow" {
  usecase "Inspect Platform Accounts" as UC20
  usecase "Monitor Platform Metrics" as UC21
  usecase "Register Account" as UC01
  usecase "Run Scheduled Housekeeping" as UC22
}
actor "Email Service" as A08 <<system>>
actor "Scheduler" as A09 <<time>>
A03 -- UC20
A03 -- UC21
A04 -- UC01
UC01 -- A08
UC22 -- A09
@enduml
"
`;
